# phosphor-mobil3

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/debug/: AndroidManifest.xml
app/src/debug/kotlin/dev/phosphor/mobil3/: SelfTestReceiver.kt
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/dev/phosphor/mobil3/: CaptureNotificationListenerService.kt  CaptureService.kt  MainActivity.kt  MicController.kt  PhosphorNative.kt  PhosphorPlayer.kt  PlaybackService.kt  RemotePlayer.kt
app/src/main/kotlin/dev/phosphor/mobil3/ui/: Console.kt  Controls.kt  DeckSheet.kt  Dimens.kt  Gestures.kt  Glyphs.kt  Insets.kt  LightSheet.kt  ManualSheet.kt  Motion.kt  Palette.kt  PhosphorScreen.kt  RoomStyle.kt  ScopeModel.kt  ScopeUiState.kt  Sheets.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
dev/: pm3
docs/: ARCHITECTURE.md  REMOTE.md  UX-SPEC.md
gradle/: libs.versions.toml
relay/: Cargo.toml
relay/src/: capture.rs  cli.rs  config.rs  geometry.rs  library.rs  main.rs  player.rs  proto.rs  scope.rs  session.rs  util.rs
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: bridge_core.rs  deck.rs  engine.rs  jni_glue.rs  lib.rs  remote.rs  render.rs  selftest.rs  spsc.rs
scripts/: bootstrap-android.sh  env.sh  relay-install.sh
